--- a/Naylah.Xamarin/Naylah.Xamarin.nuspec
+++ b/Naylah.Xamarin/Naylah.Xamarin.nuspec
@@ -14,7 +14,7 @@
     <tags>Naylah, Toolkit, Xamarin, C#, Xaml,</tags>
     <dependencies>
 
-      <group targetFramework=".NETPortable0.0-netcore45+wpa81">
+      <group targetFramework=".NETPortable0.0-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10">
         <dependency id="Naylah.Core"/>
         <dependency id="Xamarin.Forms" version="[2.3.0.107]" />
         <dependency id="PCLStorage" version="1.0.2" />
@@ -22,32 +22,13 @@
         <dependency id="Xam.Plugin.Media" version="2.3.0" />
         <dependency id="Xamarin.FFImageLoading.Forms" version="2.1.6" />
       </group>
-      
-      <group targetFramework=".NETPortable0.0-wp8">
-        <dependency id="Naylah.Core"/>
-        <dependency id="Xamarin.Forms" version="[2.3.0.107]" />
-        <dependency id="PCLStorage" version="1.0.2" />
-        <dependency id="Plugin.Permissions" version="1.0.2" />
-        <dependency id="Xam.Plugin.Media" version="2.3.0" />
-        <dependency id="Xamarin.FFImageLoading.Forms" version="2.1.6" />
+        
+      <group targetFramework="MonoTouch1.0">
+        <dependency id="WebP.Touch" version="1.0.2" />
+        <dependency id="FloatLabeledEntry.iOS" version="1.0.1" />
       </group>
-
-      <group targetFramework="MonoAndroid1.0">
-         <dependency id="Naylah.Core"/>
-        <dependency id="Xamarin.Forms" version="[2.3.0.107]" />
-        <dependency id="PCLStorage" version="1.0.2" />
-        <dependency id="Plugin.Permissions" version="1.0.2" />
-        <dependency id="Xam.Plugin.Media" version="2.3.0" />
-        <dependency id="Xamarin.FFImageLoading.Forms" version="2.1.6" />
-      </group>
-      
+  
       <group targetFramework="Xamarin iOS1.0">
-        <dependency id="Naylah.Core"/>
-        <dependency id="Xamarin.Forms" version="[2.3.0.107]" />
-        <dependency id="PCLStorage" version="1.0.2" />
-        <dependency id="Plugin.Permissions" version="1.0.2" />
-        <dependency id="Xam.Plugin.Media" version="2.3.0" />
-        <dependency id="Xamarin.FFImageLoading.Forms" version="2.1.6" />
         <dependency id="WebP.Touch" version="1.0.2" />
         <dependency id="FloatLabeledEntry.iOS" version="1.0.1" />
       </group>
