--- a/Naylah.Xamarin/packages.config
+++ b/Naylah.Xamarin/packages.config
@@ -3,7 +3,8 @@
   <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Plugin.Permissions" version="1.1.7" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xam.Plugin.Media" version="2.3.0" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Xamarin.FFImageLoading" version="2.1.6" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Xamarin.FFImageLoading.Forms" version="2.1.6" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading" version="2.1.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.1.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.1.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.0.107" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
